2013-12-30  Allen D. Ball  <ball@10-0-1-2.lan>

	* src/main/java/iprotium/upnp/SSDPThread.java:
	Override ping() to only broadcast a SSDPDiscoveryRequest if the
	SSDPDiscoveryCache is empty or an entry is about to expire.
	Added byebye() method.

	* src/main/java/iprotium/upnp/ssdp/SSDPDiscoveryThread.java:
	Added ping() method and made interval member protected.

	* src/main/java/iprotium/upnp/ssdp/SSDPMessage.java:
	Changed Impl.getLocation(SSDPMessage) to use AL if
	HttpHeaders.LOCATION is not set.

2013-12-27  Allen D. Ball  <ball@10-0-1-2.lan>

	* src/main/java/iprotium/upnp/Device.java:
	Integrate SSDPThread to announce Device Services.

	* src/main/java/iprotium/upnp/Service.java:
	Added getUSN() method.

	* src/main/java/iprotium/upnp/MediaServer.java:
	Provide RootDevice Service.

	* src/main/java/iprotium/upnp/RootDevice.java: Initial writing.

	* src/main/java/iprotium/upnp/SSDPThread.java: Initial writing.

	* src/main/java/iprotium/upnp/DataSourceServlet.java:
	Initial writing.

	* iprotium.upnp.ssdp:
	Added SSDPDiscoveryThread.queue(SSDPMessage) method.
	SSDPMessage interface specifies toDatagramPacket() method.
	Added SSDPDiscoveryThread parameter to
	SSDPDiscoveryThread.Listener methods.

2013-12-26  Allen D. Ball  <ball@10-0-1-2.lan>

	* Interim check-in: Created UPnP Service and Device abstractions
	and Tomcat scaffolding.

	* pom.xml: Require org.apache.tomcat.embed:tomcat-embed-core.

	* src/main/java/iprotium/upnp/RedirectServlet.java:
	Initial writing.

2013-11-27  Allen D. Ball  <ball@10-0-1-2.lan>

	* Annotated packages with @ManifestSection and use
	ManifestSectionProcessor to generate JAR MANIFEST.MF.

	* src/main/java/iprotium/upnp/ssdp/SSDPDiscoveryCache.java:
	Process send events to capture "local" changes.

	* src/main/java/iprotium/upnp/ssdp/SSDPDiscoveryThread.java:
	Changed Listener.sendEvent(SSDPDiscoveryRequest) interface method
	to sendEvent(SSDPMessage).

	* src/main/java/iprotium/upnp/ssdp/SSDPNotifyRequest.java: